# web-server

./: .gitignore  CMakeLists.txt  build.sh  readme.md  server.conf  test.cpp  test_client.cpp
Networking/: SimpleSocket.cpp  SimpleSocket.hpp  hdelibc-networking.hpp
Networking/Connection/: Connection.cpp  Connection.hpp
Networking/Router/: Router.cpp  Router.hpp
Networking/Server/: HTTPRequest.cpp  HTTPRequest.hpp  SimpleServer.cpp  SimpleServer.hpp  TestServer.cpp  TestServer.hpp  test.cpp  test_http_request  test_http_request.cpp  test_server
Networking/Sockets/: hdelibc-sockets.hpp
Networking/Sockets/Socket classes/: BindingSocket.cpp  BindingSocket.hpp  ConnectingSocket.cpp  ConnectingSocket.hpp  ListeningSocket.cpp  ListeningSocket.hpp  SimpleSocket.cpp
Networking/ThreadPool/: ThreadPool.cpp  ThreadPool.hpp
include/http/: HTTPResponse.hpp
include/networking/: SimpleServer.hpp  TestServer.hpp
include/networking/connection/: Connection.hpp
include/networking/router/: Router.hpp
include/networking/server/: SimpleServer.hpp  TestServer.hpp
include/networking/sockets/: SimpleSocket.hpp
include/networking/threadpool/: ThreadPool.hpp
include/utils/: Config.hpp  logger.hpp
src/Connection/: Connection.cpp
src/Router/: Router.cpp
src/Server/: HTTPRequest.cpp  HTTPResponse.cpp  SimpleServer.cpp  TestServer.cpp
src/Sockets/Socket classes/: BindingSocket.cpp  ConnectingSocket.cpp  ListeningSocket.cpp  SimpleSocket.cpp
src/ThreadPool/: ThreadPool.cpp
src/utils/: Config.cpp
tests/unit/: test_HTTPRequest.cpp  test_Router.cpp
